# zmq-parallel-nbytes

./: CMakeLists.txt  main.cpp
